HawkEdit - trying to add help info and custom completer for scripts

--- a/codebase/apps/radar/src/HawkEdit/resources.qrc
+++ b/codebase/apps/radar/src/HawkEdit/resources.qrc
@@ -1,5 +1,5 @@
 <!DOCTYPE RCC><RCC version="1.0">
-<qresource>
+<qresource  prefix="/">
   <file>images/ok_check.png</file>
   <file>images/cancel_x.png</file>
   <file>images/apply.png</file>
